--- a/Calling/package.json
+++ b/Calling/package.json
@@ -21,9 +21,10 @@
   "dependencies": {
     "@azure/abort-controller": "^1.1.0",
     "@azure/communication-calling": "^1.28.4",
+    "@azure/communication-calling-effects": "^1.1.1",
     "@azure/communication-common": "^2.3.1",
     "@azure/communication-identity": "^1.3.0",
-    "@azure/communication-react": "1.19.0",
+    "@azure/communication-react": "1.20.0",
     "@azure/logger": "^1.0.4",
     "@babel/preset-react": "^7.12.7",
     "@fluentui/react": "^8.117.1",
