--- a/Server/tsconfig.json
+++ b/Server/tsconfig.json
@@ -7,7 +7,7 @@
     "moduleResolution": "node",
     "sourceMap": true,
     "outDir": "./dist",
-    "rootDir": "./src",
+    "rootDir": "./",
     "baseUrl": "./",
     "paths": {
       "*": ["node_modules/*"]
