--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,1 +1,1 @@
-* @alkwa-msft @jamesburnside @PorterNan @mgamis-msft @carocao-msft @dmceachernmsft @prabhjot-msft @edwardlee-msft
+* @alkwa-msft @jamesburnside @mgamis-msft @carocao-msft @dmceachernmsft @prabhjot-msft @edwardlee-msft
