--- a/Server/package.json
+++ b/Server/package.json
@@ -32,6 +32,7 @@
     "@azure/core-http": "3.0.4"
   },
   "devDependencies": {
+    "@babel/core": "^7.16.10",
     "@types/cookie-parser": "^1.4.2",
     "@types/copy-webpack-plugin": "^6.4.0",
     "@types/express": "^4.17.8",
