--- a/Server/package.json
+++ b/Server/package.json
@@ -17,10 +17,11 @@
     "lint:quiet": "eslint */**/*.{ts,tsx} --quiet"
   },
   "dependencies": {
-    "@azure/communication-chat": "1.4.0",
-    "@azure/communication-common": "2.3.1",
-    "@azure/communication-identity": "1.3.0",
-    "@azure/communication-rooms": "1.0.0",
+    "@azure/communication-chat": "^1.6.0",
+    "@azure/communication-common": "^2.4.0",
+    "@azure/communication-identity": "^1.3.1",
+    "@azure/communication-rooms": "^1.2.0",
+    "@azure/core-http": "3.0.4",
     "@types/cors": "^2.8.8",
     "cookie-parser": "~1.4.7",
     "cors": "^2.8.5",
@@ -28,8 +29,7 @@
     "eslint-plugin-header": "^3.1.0",
     "express": "~4.21.2",
     "http-errors": "~1.6.3",
-    "morgan": "~1.9.1",
-    "@azure/core-http": "3.0.4"
+    "morgan": "~1.9.1"
   },
   "devDependencies": {
     "@babel/core": "^7.16.10",
@@ -44,7 +44,7 @@
     "@types/webpack-node-externals": "^2.5.0",
     "@typescript-eslint/eslint-plugin": "^5.8.1",
     "@typescript-eslint/parser": "^5.8.1",
-   "copy-webpack-plugin": "^9.1.0",
+    "copy-webpack-plugin": "^9.1.0",
     "eslint": "^7.7.0",
     "eslint-config-prettier": "^6.12.0",
     "eslint-plugin-flowtype": "^5.2.0",
