--- a/Calling/package.json
+++ b/Calling/package.json
@@ -25,7 +25,8 @@
     "@azure/communication-chat": "^1.6.0",
     "@azure/communication-common": "^2.3.1",
     "@azure/communication-identity": "^1.3.0",
-    "@azure/communication-react": "^1.29.0",
+  "@azure/communication-react": "^1.29.0",
+  "@azure/identity": "^4.11.1",
     "@azure/logger": "^1.0.4",
     "@babel/preset-react": "^7.12.7",
     "@fluentui/react": "^8.121.11",
